--- a/src/app/views/header/header.component.scss
+++ b/src/app/views/header/header.component.scss
@@ -1,4 +1,25 @@
 .container{
+  margin: 0;
+  padding: 0;
   background: white;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.36);
+  .spacer {
+    flex: 1 1 auto;
+  }
+  .logo{
+    display: inline-block;
+    .title{
+      display: inline-block;
+      margin-left: 5px;
+      font-size: larger;
+    }
+  }
+  .menu{
+    display: inline-block;
+    margin-left: 40px;
+    .menu-item{
+      font-size: medium;
+    }
+  }
+
 }
