feat: 搭建主体框架

--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -8,6 +8,7 @@
         <span class="title">Dragon's Zone</span>
       </button>
       <span class="menu">
+        <button class="menu-item" mat-button routerLink="/">首页</button>
         <button class="menu-item" mat-button routerLink="/news">新鲜事</button>
         <button class="menu-item" mat-button routerLink="/projects">项目概览</button>
         <button class="menu-item" mat-button routerLink="/about">关于</button>
