--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,3 +1,6 @@
-<h2 class="main">
-  主页
-</h2>
+<div class="first-container">
+  <div class="left">
+    <p class="l">left</p>
+  </div>
+  <div class="right">right</div>
+</div>
