--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,3 +1,19 @@
-h2{
-  text-align: center;
+
+.first-container {
+  margin-top: -10px;
+  position: relative;
+
+  .left, .right {
+    position: absolute;
+    display: inline-block;
+
+  }
+
+  .left {
+    left: 0;
+  }
+
+  .right {
+    right: 0;
+  }
 }
