feat: 搭建主体框架

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -4,4 +4,6 @@
   </div>
   <div class="right">right</div>
   <div class="delete">delete</div>
+  <div class="delete">delete</div>
+  <div class="delete">delete</div>
 </div>
