feat: 搭建主体框架

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -3,5 +3,6 @@
     <p class="l">left</p>
   </div>
   <div class="right">right</div>
-  <div class="delete">delete</div>
+  <div class="centert">测试
+  </div>
 </div>
