--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,8 +1,3 @@
-<div class="first-container">
-  <div class="left">
-    <p class="l">left</p>
-  </div>
-  <div class="right">right</div>
-  <div class="centert">测试2
-  </div>
+<div class="container">
+  <h2 class="title">首页</h2>
 </div>
