feat: 添加侧边栏

--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar color="primary">
 
 
-      <button mat-button class="logo" routerLink="/">
+      <button mat-button class="logo" (click)="toggleMenu()">
         <img src="assets/logo.png" class="logo" alt="" height="30px">
         <span class="title">Dragon's Zone</span>
       </button>
