--- a/src/app/route/app.component.html
+++ b/src/app/route/app.component.html
@@ -1,2 +1,9 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<mat-drawer-container class="drawer-container">
+  <mat-drawer class="mat-drawer" mode="side" [opened] = "this.menuService.open">
+    <app-side></app-side>
+  </mat-drawer>
+  <mat-drawer-content>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+</mat-drawer-container>
