feat: 添加移动端适配

--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -27,5 +27,7 @@
     <mat-divider></mat-divider>
     <button class="hide-menu-item" mat-button (click)="go('/about')">关于</button>
     <mat-divider></mat-divider>
+    <a href="https://github.com/d7z-team" target="_blank"><button class="hide-menu-item" mat-button>项目地址</button></a>
+    <mat-divider></mat-divider>
   </mat-list>
 </div>
